fix(Sales): Right align numbers in uni-summary
Because it looks prettier.

Closes: #1736

--- a/src/styles/components/uniSummary/__uniSummary.sass
+++ b/src/styles/components/uniSummary/__uniSummary.sass
@@ -39,6 +39,7 @@ uni-summary .unisummary
         order: 3
         padding: 0 2rem .7rem
         line-height: 1.2
+        text-align: end
 
     &:after
         display: block
